[package]
name = "rtty"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
async-stream = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
pty-process = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
